--- a/src/components/front/front-edu/pages/elem-edu-vgu2025cpp.html
+++ b/src/components/front/front-edu/pages/elem-edu-vgu2025cpp.html
@@ -29,8 +29,12 @@
   <div class="anchor" id="konspekt"></div>
   <h2>Конспект занятий</h2>
 
-  <p><a href="lec-0.html" class="js-vgu2025-cpp">Занятие Вводное (21.10.2025 вт)</a></p>
-  <p><a href="lec-1b.html" class="js-vgu2025-cpp">Занятие 1. Паттерны (2гр) (24.10.2025 пт)</a></p>
-  <p><a href="lec-1a.html" class="js-vgu2025-cpp">Занятие 1. Классы (1гр) (25.10.2025 сб)</a></p>
+  <p><a href="lec-0.html" class="js-vgu2025-cpp">(21.10.2025 вт) Занятие Вводное</a></p>
+  <p><a href="lec-1b.html" class="js-vgu2025-cpp">(24.10.2025 пт) 2гр Занятие 1. Паттерны</a></p>
+  <p><a href="lec-1a.html" class="js-vgu2025-cpp">(25.10.2025 сб) 1гр Занятие 1. Классы</a></p>
+  <p><a href="lec-1ap.html" class="js-vgu2025-cpp">(27.10.2025 пн) 1гр Практика по занятию 1. Классы</a></p>
+  <p><a href="lec-2a.html" class="js-vgu2025-cpp">(28.10.2025 вт) 1гр Занятие 2. Наследование</a></p>
+  <p><a href="lec-1bp.html" class="js-vgu2025-cpp">(30.10.2025 чт) 2гр Практика по занятию 1. Паттерны</a></p>
+  <p><a href="m1.html" class="js-vgu2025-cpp">Конспект методички ч1</a></p>
 </article>
 
